--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-stock-add.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-stock-add.html
@@ -1,15 +1,11 @@
 <div id="form_lendingstock_add" class="guarantee-extend" style="display: none">
 
-    <div class="form-group"><!--房产抵押-->
+    <div class="form-group"><!--股权质押-->
         <label for="id_sure_stock" class="col-sm-3 control-label">
-            {{ form_lendingstock_add.sure_stock.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form_lendingstock_add.sure_stock }}
-        </div>
+            {{ form_lendingstock_add.sure_stock.label }}：</label>
+        <div class="col-sm-9">{{ form_lendingstock_add.sure_stock }}</div>
         <label id="e_sure_stock" class="pull-right">
-            {{ form_lendingstock_add.sure_stock.errors }}
-        </label>
+            {{ form_lendingstock_add.sure_stock.errors }}</label>
     </div>
 
 </div>
