--- a/A_dbms/templates/dbms/custom/scan/custom-tab.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-tab.html
@@ -8,6 +8,9 @@
             <li role="presentation">
                 <a href="#business_information" style="background-color: #f5f5f5"
                    aria-controls="profile" role="tab" data-toggle="tab">工商信息</a></li>
+            <li role="presentation">
+                <a href="#shareholder" style="background-color: #f5f5f5"
+                   aria-controls="profile" role="tab" data-toggle="tab">股东信息</a></li>
         {% endif %}
         <li role="presentation" class="active">
             <a href="#project_status" style="background-color: #f5f5f5"
