--- a/A_dbms/templates/dbms/meeting/meeting-notice.html
+++ b/A_dbms/templates/dbms/meeting/meeting-notice.html
@@ -1,42 +1,82 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ meeting_obj.num }}</title>
-</head>
-<body>
-<p>成都武侯中小企业融资担保有限责任公司</p>
-<p>{{ meeting_obj.review_year }}年度第{{ meeting_obj.review_order }}次{{ meeting_obj.get_review_model_display }}会通知</p>
-<p>计划上会时间：{{ meeting_obj.review_date }}</p>
-<p>评审项目基本情况：
-<div class="table-responsive">
-    <table class="table table-bordered table-hover
-                table-condensed active">
-        <thead>
-        <tr style="text-align: center">
-            <th>单位</th>
-            <th>申请金额</th>
-            <th>项目经理</th>
-            <th>评委</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for article in meeting_obj.article.all %}
-            <tr>
-                <td>{{ article.custom }}</td>
-                <td>{{ article.amount }}</td>
-                <td>{{ article.director.name }}</td>
-                <td>
-                    {% for expert in article.expert.all %}
-                        {{ expert.name }}/
+{% extends 'base.html' %}
+
+{% block title %}{{ meeting_obj.num }}{% endblock %}
+{% block extra-css %}
+    <style>
+        body {
+            width: 210mm;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .headline {
+            text-align: center
+        }
+
+        .notice-body {
+            font-size: 14pt
+        }
+
+        .custom {
+            width: 30%
+        }
+
+        .amount {
+            width: 10%
+        }
+
+        .directior {
+            width: 15%
+        }
+
+        .expert {
+            width: 45%
+        }
+
+        thead {
+            border: 1px solid black;
+        }
+
+        thead {
+            text-align: center;
+        }
+    </style>
+{% endblock %}
+
+{% block body %}
+    <div>
+        <div class="headline">
+            <h2>成都武侯中小企业融资担保有限责任公司</h2>
+            <h2>{{ meeting_obj.review_year }}年度第{{ meeting_obj.review_order }}次{{ meeting_obj.get_review_model_display }}会通知</h2>
+        </div>
+        <div class="notice-body">
+            <p>计划上会时间：{{ meeting_obj.review_date }}</p>
+            <p>评审项目基本情况：
+            <div>
+                <table>
+                    <thead>
+                    <tr>
+                        <th class="text-center">单位</th>
+                        <th class="text-center">申请金额</th>
+                        <th class="text-center">项目经理</th>
+                        <th class="text-center">评委</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for article in meeting_obj.article.all %}
+                        <tr>
+                            <td class="custom">{{ article.custom }}</td>
+                            <td class="amount">{{ article.amount }}</td>
+                            <td class="directior">{{ article.director.name }}</td>
+                            <td class="expert">
+                                {% for expert in article.expert.all %}
+                                    {{ expert.name }}{% if not forloop.last %}、{% endif %}
+                                {% endfor %}</td>
+                        </tr>
                     {% endfor %}
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-</div>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+{% endblock %}
 
-
-</body>
-</html>
