--- a/A_dbms/templates/dbms/article/scan/article-tab.html
+++ b/A_dbms/templates/dbms/article/scan/article-tab.html
@@ -11,6 +11,9 @@
             <a href="#comment" style="background-color: #f5f5f5"
                aria-controls="messages" role="tab" data-toggle="tab"> 评委意见 </a></li>
         <li role="presentation">
+            <a href="#sign" style="background-color: #f5f5f5"
+               aria-controls="messages" role="tab" data-toggle="tab"> 签批情况 </a></li>
+        <li role="presentation">
             <a href="#single" style="background-color: #f5f5f5"
                aria-controls="settings" role="tab" data-toggle="tab"> 单项额度 </a></li>
         <li role="presentation" class="active">
