--- a/A_dbms/templates/dbms/warrant/modl/guaranty-add-mod.html
+++ b/A_dbms/templates/dbms/warrant/modl/guaranty-add-mod.html
@@ -9,8 +9,7 @@
                 </button>
                 <h4 class="modal-title" id="addGuarantyModalLabel">
                     添加抵押物
-                    <input style="display: none" name="warrant_id"
-                           id="id_warrant_id" value={{ warrant_obj.id }}>
+                    <input style="display: none" name="warrant_id" id="id_warrant_id" value={{ warrant_obj.id }}>
                 </h4>
             </div>
             <div class="modal-body">
@@ -21,14 +20,8 @@
             <label id="formErrors"></label>
 
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="addGuarantyModalOk">
-                    添加
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="addGuarantyModalOk">添加</button>
             </div>
         </div>
     </div>
