--- a/A_dbms/templates/dbms/warrant/scan/warrant_tab/ownership.html
+++ b/A_dbms/templates/dbms/warrant/scan/warrant_tab/ownership.html
@@ -18,11 +18,7 @@
             <tr ownership-nid="{{ ownership.id }}">
                 <td>{{ ownership.ownership_num }}</td>
                 <td>{{ ownership.owner }}</td>
-                <td>
-                    <a class="btn btn-danger btn-xs delOwershipB">
-                        删除
-                    </a>
-                </td>
+                <td><a class="btn btn-danger btn-xs delOwershipB">删除</a></td>
             </tr>
         {% endfor %}
         </tbody>
