--- a/templates/sub/nav_bar.html
+++ b/templates/sub/nav_bar.html
@@ -1,31 +1,21 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-
             <a class="navbar-brand" href="#">
-
                 {% block pro_name %}
                     成都武侯中小企业融资担保有限责任公司
                 {% endblock %}
-
             </a>
         </div>
-
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown ">
-                    <a href="#"
-                       class="dropdown-toggle"
-                       data-toggle="dropdown"
-                       role="button">
-                        {{ request.user.name }}
-                        <span class="caret"></span>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button">
+                        {{ request.user.name }}<span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
                         <li><a href="#">个人信息</a></li>
-                        <li><a href="{% url 'logout' %}">
-                            退出系统
-                        </a></li>
+                        <li><a href="{% url 'logout' %}">退出系统</a></li>
                     </ul>
                 </li>
             </ul>
