--- a/A_dbms/templates/dbms/agree/scan/agree-summry.html
+++ b/A_dbms/templates/dbms/agree/scan/agree-summry.html
@@ -2,27 +2,18 @@
     <div class="panel-heading">
         <label>合同情况</label>
         <label class="navbar-right">
-            <a class="btn btn-primary btn-sm"
-               target="_blank"
+            <a class="btn btn-primary btn-sm" target="_blank"
                href="{% url 'dbms:agree_preview' agree_id=agree_obj.id %}">
-                预览
-            </a>
-            <a class="btn btn-primary btn-sm " id="addCounterB">
-                添加反担保
-            </a>
-            <a class="btn btn-danger btn-sm " id="editAgreeB">
-                修改
-            </a>
-            <a class="btn btn-danger btn-sm " id="delAgreeB">
-                删除
-            </a>
-            <a class="btn btn-danger btn-sm " id="signAgreeB">
-                签批
-            </a>
+                预览 </a>
+            <a class="btn btn-primary btn-sm " id="addCounterB">添加反担保</a>
+            <a class="btn btn-primary btn-sm " id="editAgreeB">修改</a>
+            <a class="btn btn-primary btn-sm " id="delAgreeB">删除</a>
+            <a class="btn btn-primary btn-sm " id="signAgreeB">签批</a>
         </label>
     </div>
 
     <div class="panel-body row" style="padding: 1px;">
         {% include 'dbms/agree/scan/agree-summry-body.html' %}
     </div>
+
 </div>
