--- a/A_dbms/templates/dbms/appraisal/scan/appraisal-summry.html
+++ b/A_dbms/templates/dbms/appraisal/scan/appraisal-summry.html
@@ -3,59 +3,29 @@
         <label>项目情况</label>
         <label class="navbar-right">
             {% if not lending_obj %}
-                <a class="btn btn-primary btn-sm " id="singleQuota">
-                    单项额度
-                </a> <!--#path('meeting/lending/'-->
-                <a class="btn btn-primary btn-sm " id="lendingOrder">
-                    放款次序
-                </a> <!--#path('meeting/lending/'-->
-                <a class="btn btn-primary btn-sm " id="articleSignB">
-                    项目签批
-                </a> <!--#path('meeting/article/sign/'-->
+                <a class="btn btn-primary btn-sm " id="summaryScan" target="_blank"
+                   href="{% url 'dbms:summary_scan' article_id=article_obj.id %}">纪要预览</a><!--#path(' '-->
+                <a class="btn btn-primary btn-sm " id="singleQuota">单项额度</a><!--#path('appraisal/single/add/'-->
+                <a class="btn btn-primary btn-sm " id="lendingOrder">放款次序</a><!--#path('appraisal/lending/add/'-->
+                <a class="btn btn-primary btn-sm " id="articleSignB">项目签批</a><!--#path('appraisal/sign/'-->
             {% else %}
-                <a class="btn btn-primary btn-sm " id="guaranteeB">
-                    反担保
-                </a> <!--#path('meeting/lending/'-->
+                <a class="btn btn-primary btn-sm " id="guaranteeB">反担保</a><!--#path('appraisal/guarantee/add/'-->
             {% endif %}
         </label>
     </div>
 
     <div class="panel-body row" style="padding: 1px;">
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            客户名称：{{ article_obj.custom }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目编号：{{ article_obj.article_num }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            纪要编号：{{ article_obj.summary_num }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            金额合计：{{ article_obj.amount }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            续贷金额：{{ article_obj.renewal }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            新增金额：{{ article_obj.augment }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目经理：{{ article_obj.director.name }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目助理：{{ article_obj.assistant.name }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            风控专员：{{ article_obj.control.name }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            担保期限：{{ article_obj.credit_term }}个月
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            签批日期：{{ article_obj.sign_date }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目状态：{{ article_obj.get_article_state_display }}
-        </label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">客户名称：{{ article_obj.custom }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">项目编号：{{ article_obj.article_num }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">纪要编号：{{ article_obj.summary_num }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">金额合计：{{ article_obj.amount }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">续贷金额：{{ article_obj.renewal }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">新增金额：{{ article_obj.augment }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">项目经理：{{ article_obj.director.name }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">项目助理：{{ article_obj.assistant.name }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">风控专员：{{ article_obj.control.name }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">担保期限：{{ article_obj.credit_term }}个月</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">签批日期：{{ article_obj.sign_date }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">项目状态：{{ article_obj.get_article_state_display }}</label>
     </div>
 </div>
