--- a/A_dbms/templates/dbms/meeting/article/meeting-article-summry.html
+++ b/A_dbms/templates/dbms/meeting/article/meeting-article-summry.html
@@ -4,49 +4,23 @@
             项目情况
         </label>
         <label class="navbar-right">
-            <a class="btn btn-primary btn-sm " id="allotExpert">
-                分配评委
-            </a><!--#path('meeting/allot_ajax/'-->
+            <a class="btn btn-primary btn-sm " id="allotExpert">分配评委</a><!--#path('meeting/allot_ajax/'-->
         </label>
     </div>
 
     <div class="panel-body row" style="padding: 1px;">
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            客户名称：{{ article_obj.custom }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目编号：{{ article_obj.article_num }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            评审编号：{{ meeting_obj.num }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            金额合计：{{ article_obj.amount }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            续贷金额：{{ article_obj.renewal }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            新增金额：{{ article_obj.augment }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目经理：{{ article_obj.director.name }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目助理：{{ article_obj.assistant.name }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            风控专员：{{ article_obj.control.name }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            担保期限：{{ article_obj.credit_term }}个月
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            签批日期：{{ article_obj.sign_date }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            项目状态：{{ article_obj.get_article_state_display }}
-        </label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">客户名称：{{ article_obj.custom }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">项目编号：{{ article_obj.article_num }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">评审编号：{{ meeting_obj.num }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">金额合计：{{ article_obj.amount }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">续贷金额：{{ article_obj.renewal }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">新增金额：{{ article_obj.augment }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">项目经理：{{ article_obj.director.name }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">项目助理：{{ article_obj.assistant.name }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">风控专员：{{ article_obj.control.name }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">担保期限：{{ article_obj.credit_term }}个月</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">签批日期：{{ article_obj.sign_date }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">项目状态：{{ article_obj.get_article_state_display }}</label>
     </div>
 </div>
 
