--- a/A_dbms/templates/dbms/meeting/scan/meeting-summry.html
+++ b/A_dbms/templates/dbms/meeting/scan/meeting-summry.html
@@ -2,38 +2,19 @@
     <div class="panel-heading">
         <label>评审会情况</label>
         <label class="pull-right">
-            <a class="btn btn-primary btn-sm"
-               target="_blank"
-               href="{% url 'dbms:meeting_notice' meeting_id=meeting_obj.id %}">
-                会议通知
-            </a>
-            <a class="btn btn-primary btn-sm " id="addMeetingArticle">
-                追加项目
-            </a>
-            <a class="btn btn-primary btn-sm " id="editMeeting">
-                改期
-            </a>
-            <a class="btn btn-primary btn-sm " id="closeMeeting">
-                完成上会
-            </a>
-            <a class="btn btn-danger btn-sm " id="delMeeting">
-                取消会议
-            </a>
+            <a class="btn btn-primary btn-sm" target="_blank"
+               href="{% url 'dbms:meeting_notice' meeting_id=meeting_obj.id %}">会议通知</a>
+            <a class="btn btn-primary btn-sm " id="addMeetingArticle">追加项目</a>
+            <a class="btn btn-primary btn-sm " id="editMeeting">改期</a>
+            <a class="btn btn-primary btn-sm " id="closeMeeting">完成上会</a>
+            <a class="btn btn-danger btn-sm " id="delMeeting">取消会议</a>
         </label>
     </div>
 
     <div class="panel-body row" style="padding: 1px;">
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            评审编号：{{ meeting_obj.num }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            评审类型：{{ meeting_obj.get_review_model_display }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            评审日期：{{ meeting_obj.review_date }}
-        </label>
-        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            会议状态：{{ meeting_obj.get_meeting_state_display }}
-        </label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">评审编号：{{ meeting_obj.num }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">评审类型：{{ meeting_obj.get_review_model_display }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">评审日期：{{ meeting_obj.review_date }}</label>
+        <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">会议状态：{{ meeting_obj.get_meeting_state_display }}</label>
     </div>
 </div>
