--- a/A_dbms/templates/dbms/provide/agreep-scan-notify.html
+++ b/A_dbms/templates/dbms/provide/agreep-scan-notify.html
@@ -3,16 +3,14 @@
 {% block title %}{{ notify_obj }}{% endblock %}
 
 {% block right-content-container %}
-
     <div class="container-fluid" style="padding-left: 1px;">
         {% include 'dbms/provide/notify/notify-summry.html' %}
         {% include 'dbms/provide/agreep_scan/agreep-tab.html' %}
         {% include 'dbms/provide/notify/agreep-notify-tab.html' %}
-
+        {% include 'dbms/provide/modl/provide-add-mod.html' %}
     </div>
 {% endblock %}
 
 {% block extra-js %}
-
-
+    {% include 'dbms/provide/extra/js-provide-add.html' %}
 {% endblock %}
