--- a/A_dbms/templates/dbms/provide/agreep-scan.html
+++ b/A_dbms/templates/dbms/provide/agreep-scan.html
@@ -3,14 +3,15 @@
 {% block title %}{{ agree_obj }}{% endblock %}
 
 {% block right-content-container %}
-
     <div class="container-fluid" style="padding-left: 1px;">
         {% include 'dbms/provide/agreep_scan/agreep-summry.html' %}
         {% include 'dbms/provide/agreep_scan/agreep-tab.html' %}
+        {% include 'dbms/provide/modl/notify-add-mod.html' %}
+        {% include 'dbms/provide/modl/notify-del-mod.html' %}
     </div>
 {% endblock %}
 
 {% block extra-js %}
-
-
+    {% include 'dbms/provide/extra/js-notify-add.html' %}
+    {% include 'dbms/provide/extra/js-notify-del.html' %}
 {% endblock %}
