--- a/A_dbms/templates/dbms/provide/agreep_scan/tab/agree-notify.html
+++ b/A_dbms/templates/dbms/provide/agreep_scan/tab/agree-notify.html
@@ -8,11 +8,14 @@
             <th>放款通知日期</th>
             <th>放款通知金额</th>
             <th>已放款金额</th>
+            {% if not notify_id %}
+                <th>操作</th>
+            {% endif %}
         </tr>
         </thead>
-        <tbody>
+        <tbody id="agree-notify-tb">
         {% for notify in agree_obj.notify_agree.all %}
-            <tr>
+            <tr notify-nid="{{ notify.id }}">
                 {% if notify_id %}
                     {% if notify.id == notify_id %}
                         <td><a href="{% url 'dbms:agreep_scan_notify' agree_id=agree_obj.id notify_id=notify.id %}">
@@ -27,7 +30,10 @@
                 {% endif %}
                 <td>{{ notify.notify_date }}</td>
                 <td>{{ notify.notify_money }}</td>
-                <td></td>
+                <td>{{ notify.notify_provide_sum }}</td>
+                {% if not notify_id %}
+                    <td><a class="btn btn-danger btn-xs delNotifyB">删除</a></td>
+                {% endif %}
             <tr>
         {% endfor %}
         </tbody>
