--- a/A_dbms/templates/dbms/agree/modl/agree-del-mod.html
+++ b/A_dbms/templates/dbms/agree/modl/agree-del-mod.html
@@ -11,14 +11,8 @@
                 是否确定项目：{{ article_obj.article_num }}!!!!
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="delArticleModalOk">
-                    确定
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="delArticleModalOk">确定</button>
             </div>
         </div>
     </div>
