--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-lendingsures-add.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-lendingsures-add.html
@@ -1,15 +1,9 @@
 <div id="form_lendingsures">
 
     <div class="form-group"><!--反担保类型-->
-        <label for="id_sure_typ" class="col-sm-3 control-label">
-            {{ form_lendingsures.sure_typ.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form_lendingsures.sure_typ }}
-        </div>
-        <label id="e_sure_typ" class="pull-right">
-            {{ form_lendingsures.sure_typ.errors }}
-        </label>
+        <label for="id_sure_typ" class="col-sm-3 control-label">{{ form_lendingsures.sure_typ.label }}：</label>
+        <div class="col-sm-9">{{ form_lendingsures.sure_typ }}</div>
+        <label id="e_sure_typ" class="pull-right">{{ form_lendingsures.sure_typ.errors }}</label>
     </div>
 
 </div>
