--- a/A_dbms/templates/dbms/meeting/modl/meeting-article-del-mod.html
+++ b/A_dbms/templates/dbms/meeting/modl/meeting-article-del-mod.html
@@ -5,24 +5,16 @@
             <div class="modal-header">
                 <h4 class="modal-title" id="delMeetingArticleModalLabel">
                     取消上会
-                    <input style="display: none" name="meeting_id"
-                           value="{{ meeting_obj.id }}">
-                    <input style="display: none" name="article_id"
-                           id="delMeetingArticleId">
+                    <input style="display: none" name="meeting_id" value="{{ meeting_obj.id }}">
+                    <input style="display: none" name="article_id" id="delMeetingArticleId">
                 </h4>
             </div>
             <div class="modal-body">
-                是否确定取消项目本次上会!!!!
+                是否确定取消该项目本次上会!!!!
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="delMeetingArticleModalOk">
-                    确定
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="delMeetingArticleModalOk"></button>
             </div>
         </div>
     </div>
