--- a/A_dbms/templates/dbms/agree/modl/agree-edit-mod.html
+++ b/A_dbms/templates/dbms/agree/modl/agree-edit-mod.html
@@ -9,26 +9,17 @@
                 </button>
                 <h4 class="modal-title" id="editArticleModalLabel">
                     修改项目
-                    <input style="display: none" name="article_id"
-                           id="articleEditId" value="{{ article_obj.id }}">
+                    <input style="display: none" name="article_id" id="articleEditId" value="{{ article_obj.id }}">
                 </h4>
             </div>
             <div class="modal-body">
-
                 <form class="form-horizontal">
                     {% include 'dbms/article/modl/mod_form/article-add-edit.html' %}
                 </form>
-
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="editArticleModalOk">
-                    修改
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="editArticleModalOk">修改</button>
             </div>
         </div>
     </div>
