--- a/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
+++ b/A_dbms/templates/dbms/agree/modl/counter-add-mod.html
@@ -3,8 +3,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close"
-                        data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <h4 class="modal-title" id="addCounterModalLabel">
@@ -13,7 +12,6 @@
                 </h4>
             </div>
             <div class="modal-body">
-
                 <form class="form-horizontal">
                     {% include 'dbms/agree/modl/mod_form/counter-add-edit.html' %}
                     {% include 'dbms/agree/modl/mod_form/counter-assure-c.html' %}
@@ -23,20 +21,11 @@
                     {% include 'dbms/agree/modl/mod_form/counter-receivable.html' %}
                     {% include 'dbms/agree/modl/mod_form/counter-stock.html' %}
                 </form>
-
             </div>
-
             <label id="formErrors"></label>
-
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="addCounterModalOk">
-                    确定
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="addCounterModalOk">确定</button>
             </div>
         </div>
     </div>
