--- a/A_dbms/templates/dbms/appraisal/lending/tab/counter-stock.html
+++ b/A_dbms/templates/dbms/appraisal/lending/tab/counter-stock.html
@@ -6,7 +6,7 @@
             <th>担保方式</th>
             <th>所有人</th>
             <th>标的公司</th>
-            <th>质押数量</th>
+            <th>质押数量(万元/股)</th>
             <th>股权性质</th>
             {% if lending_operate %}
                 <th>操作</th>
