--- a/A_dbms/templates/dbms/appraisal/modl/guarantee-add-mod.html
+++ b/A_dbms/templates/dbms/appraisal/modl/guarantee-add-mod.html
@@ -3,18 +3,14 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close"
-                        data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="guaranteeAddModalLabel">
-                    添加反担保：
-                    <input style="display: none" name="lending_id"
-                           value="{{ lending_id }}">
+                <h4 class="modal-title" id="guaranteeAddModalLabel">添加反担保：
+                    <input style="display: none" name="lending_id" value="{{ lending_id }}">
                 </h4>
             </div>
             <div class="modal-body">
-
                 <form class="form-horizontal">
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-lendingsures-add.html' %}
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-customs_c.html' %}
@@ -24,17 +20,10 @@
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-receivable-add.html' %}
                     {% include 'dbms/appraisal/modl/mod_form/guarantee-stock-add.html' %}
                 </form>
-
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="guaranteeAddModalOk">
-                    添加
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="guaranteeAddModalOk">添加</button>
             </div>
         </div>
     </div>
