--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-customs_p.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-customs_p.html
@@ -1,15 +1,15 @@
 <div id="form_lendingcustoms_p_add" class="guarantee-extend" style="display: none">
 
-    <div class="form-group"><!--企业保证人-->
-        <label for="id_sure_p" class="col-sm-3 control-label">
-            {{ form_lendingcustoms_p_add.sure_p.label }}：
-        </label>
+    <div class="form-group"><!--个人保证人-->
+        <label for="id_sure_p" class="col-sm-3 control-label">反担保个人：</label>
         <div class="col-sm-9">
-            {{ form_lendingcustoms_p_add.sure_p }}
+            <select name="sure_p" class="form-control" multiple="" id="id_sure_p" required="">
+                {% for custom_p in form_lendingcustoms_p_add %}
+                    <option value="{{ custom_p.0 }}">{{ custom_p.1 }}</option>
+                {% endfor %}
+            </select>
         </div>
-        <label id="e_sure_p" class="pull-right">
-            {{ form_lendingcustoms_p_add.sure_p.errors }}
-        </label>
+        <label id="id_sure_p" class="pull-right"></label>
     </div>
 
 </div>
