--- a/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-ground-add.html
+++ b/A_dbms/templates/dbms/appraisal/modl/mod_form/guarantee-ground-add.html
@@ -2,14 +2,9 @@
 
     <div class="form-group"><!--土地抵押-->
         <label for="id_sure_house" class="col-sm-3 control-label">
-            {{ form_lendingground_add.sure_ground.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form_lendingground_add.sure_ground }}
-        </div>
-        <label id="e_sure_house" class="pull-right">
-            {{ form_lendingground_add.sure_ground.errors }}
-        </label>
+            {{ form_lendingground_add.sure_ground.label }}：</label>
+        <div class="col-sm-9">{{ form_lendingground_add.sure_ground }}</div>
+        <label id="e_sure_house" class="pull-right">{{ form_lendingground_add.sure_ground.errors }}</label>
     </div>
 
 </div>
