--- a/A_dbms/templates/dbms/article/modl/article-add-mod.html
+++ b/A_dbms/templates/dbms/article/modl/article-add-mod.html
@@ -3,32 +3,20 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close"
-                        data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="addArticleModalLabel">
-                    添加项目
-                </h4>
+                <h4 class="modal-title" id="addArticleModalLabel">添加项目</h4>
             </div>
             <div class="modal-body">
-
                 <form class="form-horizontal">
                     {% include 'dbms/article/modl/mod_form/article-add-edit.html' %}
                 </form>
             </div>
-
             <label id="formErrors"></label>
-
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="addArticleModalOk">
-                    添加
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="addArticleModalOk">添加</button>
             </div>
         </div>
     </div>
