--- a/A_dbms/templates/dbms/article/modl/article-del-mod.html
+++ b/A_dbms/templates/dbms/article/modl/article-del-mod.html
@@ -3,24 +3,14 @@
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="delArticleModalLabel">
-                    删除项目
-                    <input style="display: none" name="article_id"
-                           value="{{ article_obj.id }}">
+                <h4 class="modal-title" id="delArticleModalLabel">删除项目
+                    <input style="display: none" name="article_id" value="{{ article_obj.id }}">
                 </h4>
             </div>
-            <div class="modal-body">
-                是否确定项目：{{ article_obj.article_num }}!!!!
-            </div>
+            <div class="modal-body">是否确定项目：{{ article_obj.article_num }}!!!!</div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="delArticleModalOk">
-                    确定
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="delArticleModalOk">确定</button>
             </div>
         </div>
     </div>
