--- a/A_dbms/templates/dbms/article/modl/feedback-add-mod.html
+++ b/A_dbms/templates/dbms/article/modl/feedback-add-mod.html
@@ -3,32 +3,21 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close"
-                        data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="addFeedbackModalLabel">
-                    项目反馈：{{ article_obj.article_num }}
-                    <input style="display: none" name="article_id"
-                           value="{{ article_obj.id }}">
+                <h4 class="modal-title" id="addFeedbackModalLabel">项目反馈：{{ article_obj.article_num }}
+                    <input style="display: none" name="article_id" value="{{ article_obj.id }}">
                 </h4>
             </div>
             <div class="modal-body">
-
                 <form class="form-horizontal">
                     {% include 'dbms/article/modl/mod_form/feedback-add-edit.html' %}
                 </form>
-
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="addFeedbackModalOk">
-                    添加
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="addFeedbackModalOk">添加</button>
             </div>
         </div>
     </div>
