--- a/A_dbms/templates/dbms/custom/modl/custom-del-mod.html
+++ b/A_dbms/templates/dbms/custom/modl/custom-del-mod.html
@@ -3,24 +3,14 @@
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="delCustomModalLabel">
-                    删除客户
-                    <input style="display: none" name="custom_id"
-                           value="{{ custom_obj.id }}">
+                <h4 class="modal-title" id="delCustomModalLabel">删除客户
+                    <input style="display: none" name="custom_id" value="{{ custom_obj.id }}">
                 </h4>
             </div>
-            <div class="modal-body">
-                是否确定删除客户：{{ custom_obj.name }}!!!!
-            </div>
+            <div class="modal-body">是否确定删除客户：{{ custom_obj.name }}!!!</div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="delCustomModalOk">
-                    确定
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="delCustomModalOk">确定</button>
             </div>
         </div>
     </div>
