--- a/A_dbms/templates/dbms/custom/modl/custom-edit-mod.html
+++ b/A_dbms/templates/dbms/custom/modl/custom-edit-mod.html
@@ -3,18 +3,14 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close"
-                        data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="editArticleModalLabel">
-                    修改客户
-                    <input style="display: none" name="custom_id"
-                           id="customEditId" value="{{ custom_obj.id }}">
+                <h4 class="modal-title" id="editArticleModalLabel">修改客户
+                    <input style="display: none" name="custom_id" id="customEditId" value="{{ custom_obj.id }}">
                 </h4>
             </div>
             <div class="modal-body">
-
                 <form class="form-horizontal">
                     {% include 'dbms/custom/modl/mod_form/custom-edit.html' %}
                     {% if custom_obj.genre == 1 %}
@@ -23,17 +19,10 @@
                         {% include 'dbms/custom/modl/mod_form/custom-p-edit.html' %}
                     {% endif %}
                 </form>
-
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="editCustomModalOk">
-                    修改
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="editCustomModalOk">修改</button>
             </div>
         </div>
     </div>
