--- a/A_dbms/templates/dbms/custom/modl/mod_form/custom-add.html
+++ b/A_dbms/templates/dbms/custom/modl/mod_form/custom-add.html
@@ -1,61 +1,35 @@
 <div id="form_custom_add">
 
     <div class="form-group"><!--客户名称-->
-        <label for="id_name" class="col-sm-3 control-label">
-            {{ form_custom_add.name.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form_custom_add.name }}
-        </div>
-        <label id="e_name" class="pull-right">
-            {{ form_custom_add.name.errors }}
-        </label>
+        <label for="id_name" class="col-sm-3 control-label">{{ form_custom_add.name.label }}：</label>
+        <div class="col-sm-9">{{ form_custom_add.name }}</div>
+        <label id="e_name" class="pull-right">{{ form_custom_add.name.errors }}</label>
     </div>
 
     <div class="form-group"><!--联系地址-->
-        <label for="id_contact_addrp" class="col-sm-3 control-label">
-            {{ form_custom_add.contact_addr.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form_custom_add.contact_addr }}
-        </div>
-        <label id="e_contact_addr" class="pull-right">
-            {{ form_custom_add.contact_addr.errors }}
-        </label>
+        <label for="id_contact_addrp" class="col-sm-3 control-label">{{ form_custom_add.contact_addr.label }}：</label>
+        <div class="col-sm-9">{{ form_custom_add.contact_addr }}</div>
+        <label id="e_contact_addr" class="pull-right">{{ form_custom_add.contact_addr.errors }}</label>
     </div>
 
     <div class="form-group"><!--联系人-->
-        <label for="id_linkman" class="col-sm-3 control-label">
-            {{ form_custom_add.linkman.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form_custom_add.linkman }}
-        </div>
-        <label id="e_linkman" class="pull-right">
-            {{ form_custom_add.linkman.errors }}
-        </label>
+        <label for="id_linkman" class="col-sm-3 control-label">{{ form_custom_add.linkman.label }}：</label>
+        <div class="col-sm-9">{{ form_custom_add.linkman }}</div>
+        <label id="e_linkman" class="pull-right">{{ form_custom_add.linkman.errors }}</label>
     </div>
     <div class="form-group"><!--联系电话-->
-        <label for="id_contact_num" class="col-sm-3 control-label">
-            {{ form_custom_add.contact_num.label }}：
-        </label>
-        <div class="col-sm-9">
-            {{ form_custom_add.contact_num }}
-        </div>
-        <label id="e_contact_num" class="pull-right">
-            {{ form_custom_add.contact_num.errors }}
-        </label>
+        <label for="id_contact_num" class="col-sm-3 control-label">{{ form_custom_add.contact_num.label }}：</label>
+        <div class="col-sm-9">{{ form_custom_add.contact_num }}</div>
+        <label id="e_contact_num" class="pull-right">{{ form_custom_add.contact_num.errors }}</label>
     </div>
 
     <div class="form-group"><!--客户类型-->
-        <label for="id_genre" class="col-sm-3 control-label">
-            {{ form_custom_add.genre.label }}：</label>
+        <label for="id_genre" class="col-sm-3 control-label">{{ form_custom_add.genre.label }}：</label>
         <div class="col-sm-9">{{ form_custom_add.genre }}</div>
         <label id="e_genre" class="pull-right"> {{ form_custom_add.genre.errors }} </label>
     </div>
     <div class="form-group"><!--是否仅为反担保人-->
-        <label for="id_counter_only" class="col-sm-3 control-label">
-            {{ form_custom_add.counter_only.label }}：</label>
+        <label for="id_counter_only" class="col-sm-3 control-label">{{ form_custom_add.counter_only.label }}：</label>
         <div class="col-sm-9">{{ form_custom_add.counter_only }}</div>
         <label id="e_counter_only" class="pull-right">{{ form_custom_add.counter_only.errors }}</label>
     </div>
