--- a/A_dbms/templates/dbms/meeting/extra/js-expert-allot-add.html
+++ b/A_dbms/templates/dbms/meeting/extra/js-expert-allot-add.html
@@ -24,7 +24,7 @@
             var postDataStr = JSON.stringify(postData);
             console.log(postDataStr)
             $.ajax({
-                url: '/dbms/meeting/allot/',
+                url: '/dbms/meeting/allot/add/',
                 type: 'POST',
                 data: {'postDataStr': postDataStr},
                 success: function (arg) {
