--- a/A_dbms/templates/dbms/meeting/modl/expert-allot-add-mod.html
+++ b/A_dbms/templates/dbms/meeting/modl/expert-allot-add-mod.html
@@ -3,32 +3,22 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <button type="button" class="close"
-                        data-dismiss="modal" aria-label="Close">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <h4 class="modal-title" id="allotExpertModalLabel">
                     分配评委：{{ article_obj.article_num }}
-                    <input style="display: none" name="article_id"
-                           value="{{ article_obj.id }}">
+                    <input style="display: none" name="article_id" value="{{ article_obj.id }}">
                 </h4>
             </div>
             <div class="modal-body">
-
                 <form class="form-horizontal">
                     {% include 'dbms/meeting/modl/mod_form/expert-allot.html' %}
                 </form>
-
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">
-                    取消
-                </button>
-                <button type="button" class="btn btn-primary"
-                        id="allotExpertModalOk">
-                    分配
-                </button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" id="allotExpertModalOk">分配</button>
             </div>
         </div>
     </div>
